refactored messages to presentation and processing layer